--- a/templates/portfolio.html
+++ b/templates/portfolio.html
@@ -8,8 +8,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded" />
+    <script src="https://kit.fontawesome.com/e229603507.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.8/css/line.css">
     <style>
-        @import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap');
         @import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&display=swap');
 
         body {
@@ -20,6 +22,21 @@
             background-color: #27272a;
             color: #e4e4e7;
         }
+
+        @media print {
+            * {
+                -webkit-print-color-adjust: exact !important;
+                print-color-adjust: exact !important;
+                font-size: small;
+            }
+
+            @page {
+                size: A4 landscape;
+                margin: 0;
+            }
+
+        }
+    </style>
     </style>
     <script>
         tailwind.config = {
@@ -43,44 +60,31 @@
 </head>
 
 <body class="bg-gray-50 min-h-screen dark:bg-zinc-900 dark:text-zinc-100">
-    <nav class="bg-white shadow-sm border-b border-gray-200 dark:bg-zinc-800 dark:border-zinc-700">
+    <nav class="bg-white shadow-sm border-b border-gray-200 dark:bg-zinc-800 dark:border-zinc-700 print:hidden">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
             <div class="flex justify-between h-16">
                 <div class="flex items-center">
                     <div class="flex-shrink-0 flex items-center">
-                        <svg class="w-8 h-8 text-primary-600 dark:text-primary-500" fill="currentColor"
-                            viewBox="0 0 24 24">
-                            <path
-                                d="M4 5a1 1 0 0 1 1-1h14a1 1 0 0 1 1 1v2a1 1 0 0 1-1 1H5a1 1 0 0 1-1-1V5zm0 5a1 1 0 0 1 1-1h14a1 1 0 0 1 1 1v2a1 1 0 0 1-1 1H5a1 1 0 0 1-1-1v-2zm0 5a1 1 0 0 1 1-1h14a1 1 0 0 1 1 1v2a1 1 0 0 1-1 1H5a1 1 0 0 1-1-1v-2z" />
-                        </svg>
+                        <span class="material-symbols-rounded">
+                            insert_chart
+                        </span>
                         <span class="ml-2 text-xl font-semibold text-gray-900 dark:text-white">Portfolio Tracker</span>
                     </div>
                 </div>
                 <div class="flex items-center space-x-2">
                     <button id="currency-toggle"
-                        class="p-2 rounded-md text-gray-600 dark:text-gray-300 hover:bg-gray-100 dark:hover:bg-zinc-700 focus:outline-none">
-                        <svg id="usd-icon" class="w-5 h-5" xmlns="http://www.w3.org/2000/svg" fill="currentColor"
-                            viewBox="0 0 20 20">
-                            <path
-                                d="M10 18a8 8 0 100-16 8 8 0 000 16zm.5-11H9v1H7v1h2v1H7v1h2v1H7v1h2v1h1v-1h2v-1h-2v-1h2v-1h-2v-1h2V8h-2V7z" />
-                        </svg>
-                        <svg id="hkd-icon" class="w-5 h-5 hidden" xmlns="http://www.w3.org/2000/svg" fill="currentColor"
-                            viewBox="0 0 20 20">
-                            <text x="3" y="15" font-size="12" font-family="sans-serif">HK$</text>
-                        </svg>
+                        class="p-2 rounded-md text-gray-600 dark:text-gray-300 hover:bg-gray-100 dark:hover:bg-zinc-700 focus:outline-none flex">
+                        <text id="usd-icon" class="h-5" x="3" y="15" font-size="12" font-family="sans-serif">US$</text>
+                        <text id="hkd-icon" class="h-5" x="3" y="15" font-size="12" font-family="sans-serif">HK$</text>
+                    </button>
+                    <button id="print-pdf"
+                        class="p-2 rounded-md text-gray-600 dark:text-gray-300 hover:bg-gray-100 dark:hover:bg-zinc-700 focus:outline-none flex items-center justify-center">
+                        <i class="fa-solid fa-print"></i>
                     </button>
                     <button id="theme-toggle"
-                        class="p-2 rounded-md text-gray-600 dark:text-gray-300 hover:bg-gray-100 dark:hover:bg-zinc-700 focus:outline-none">
-                        <svg id="dark-mode-icon" class="hidden w-5 h-5" xmlns="http://www.w3.org/2000/svg" fill="none"
-                            viewBox="0 0 24 24" stroke="currentColor">
-                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                                d="M12 3v1m0 16v1m9-9h-1M4 12H3m15.364 6.364l-.707-.707M6.343 6.343l-.707-.707m12.728 0l-.707.707M6.343 17.657l-.707.707M16 12a4 4 0 11-8 0 4 4 0 018 0z" />
-                        </svg>
-                        <svg id="light-mode-icon" class="w-5 h-5" xmlns="http://www.w3.org/2000/svg" fill="none"
-                            viewBox="0 0 24 24" stroke="currentColor">
-                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                                d="M20.354 15.354A9 9 0 018.646 3.646 9.003 9.003 0 0012 21a9.003 9.003 0 008.354-5.646z" />
-                        </svg>
+                        class="p-2 rounded-md text-gray-600 dark:text-gray-300 hover:bg-gray-100 dark:hover:bg-zinc-700 focus:outline-none flex items-center justify-center">
+                        <i id="dark-mode-icon" class="uil uil-moon flex text-xl"></i>
+                        <i id="light-mode-icon" class="uil uil-sun flex text-xl"></i>
                     </button>
                 </div>
             </div>
@@ -88,7 +92,7 @@
     </nav>
     <main class="max-w-7xl mx-auto py-6 sm:px-6 lg:px-8">
         <div class="grid grid-cols-1 gap-5">
-            <div class="grid grid-cols-1 gap-5 sm:grid-cols-1 lg:grid-cols-2">
+            <div class="grid grid-cols-1 gap-5 sm:grid-cols-1 lg:grid-cols-2 print:grid-cols-2">
                 <div class="bg-white overflow-hidden shadow rounded-lg dark:bg-zinc-800">
                     <div class="px-4 py-5 sm:p-6 grid">
                         <div class="flex items-center justify-between mb-4">
@@ -99,12 +103,8 @@
                         <div class="grid grid-cols-1 gap-4 sm:grid-cols-2 lg:grid-cols-2">
                             <div class="flex items-center py-3">
                                 <div class="flex-shrink-0 bg-green-100 rounded-md p-3 dark:bg-green-900">
-                                    <svg class="h-6 w-6 text-green-600 dark:text-green-400"
-                                        xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
-                                        stroke="currentColor">
-                                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                                            d="M12 8c-1.657 0-3 .895-3 2s1.343 2 3 2 3 .895 3 2-1.343 2-3 2m0-8c1.11 0 2.08.402 2.599 1M12 8V7m0 1v8m0 0v1m0-1c-1.11 0-2.08-.402-2.599-1M21 12a9 9 0 11-18 0 9 9 0 0118 0z" />
-                                    </svg>
+                                    <i
+                                        class="fa-solid fa-coins h-6 w-6 flex items-center justify-center text-green-600 dark:text-green-400"></i>
                                 </div>
                                 <div class="ml-5 w-0 flex-1">
                                     <dl>
@@ -121,12 +121,8 @@
                             </div>
                             <div class="flex items-center py-3">
                                 <div class="flex-shrink-0 bg-yellow-100 rounded-md p-3 dark:bg-yellow-900">
-                                    <svg class="h-6 w-6 text-yellow-600 dark:text-yellow-400"
-                                        xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
-                                        stroke="currentColor">
-                                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                                            d="M12 8c-1.657 0-3 .895-3 2s1.343 2 3 2 3 .895 3 2-1.343 2-3 2m0-8c1.11 0 2.08.402 2.599 1M12 8V7m0 1v8m0 0v1m0-1c-1.11 0-2.08-.402-2.599-1M21 12a9 9 0 11-18 0 9 9 0 0118 0z" />
-                                    </svg>
+                                    <i
+                                        class="fa-solid fa-money-bill-trend-up h-6 w-6 flex items-center justify-center text-yellow-600 dark:text-yellow-400"></i>
                                 </div>
                                 <div class="ml-5 w-0 flex-1">
                                     <dl>
@@ -144,12 +140,8 @@
                             </div>
                             <div class="flex items-center py-3">
                                 <div class="flex-shrink-0 bg-blue-100 rounded-md p-3 dark:bg-blue-900">
-                                    <svg class="h-6 w-6 text-blue-600 dark:text-blue-400"
-                                        xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
-                                        stroke="currentColor">
-                                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                                            d="M17 9V7a2 2 0 00-2-2H5a2 2 0 00-2 2v6a2 2 0 002 2h2m2 4h10a2 2 0 002-2v-6a2 2 0 00-2-2H9a2 2 0 00-2 2v6a2 2 0 002 2zm7-5a2 2 0 11-4 0 2 2 0 014 0z" />
-                                    </svg>
+                                    <i
+                                        class="fa-solid fa-sack-dollar h-6 w-6 flex items-center justify-center text-blue-600 dark:text-blue-400"></i>
                                 </div>
                                 <div class="ml-5 w-0 flex-1">
                                     <dl>
@@ -166,12 +158,8 @@
                             </div>
                             <div class="flex items-center py-3">
                                 <div class="flex-shrink-0 bg-red-100 rounded-md p-3 dark:bg-red-900">
-                                    <svg class="h-6 w-6 text-red-600 dark:text-red-400"
-                                        xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
-                                        stroke="currentColor">
-                                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                                            d="M13 7h8m0 0v8m0-8l-8 8-4-4-6 6" />
-                                    </svg>
+                                    <i
+                                        class="fa-solid fa-arrow-trend-up h-6 w-6 flex items-center justify-center text-red-600 dark:text-red-400"></i>
                                 </div>
                                 <div class="ml-5 w-0 flex-1">
                                     <dl>
@@ -187,12 +175,8 @@
                             </div>
                             <div class="flex items-center py-3">
                                 <div class="flex-shrink-0 bg-primary-100 rounded-md p-3 dark:bg-primary-900">
-                                    <svg class="h-6 w-6 text-primary-600 dark:text-primary-400"
-                                        xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
-                                        stroke="currentColor">
-                                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                                            d="M7 12l3-3 3 3 4-4M8 21l4-4 4 4M3 4h18M4 4h16v12a1 1 0 01-1 1H5a1 1 0 01-1-1V4z" />
-                                    </svg>
+                                    <i
+                                        class="fa-solid fa-cubes-stacked h-6 w-6 flex items-center justify-center text-primary-600"></i>
                                 </div>
                                 <div class="ml-5 w-0 flex-1">
                                     <dl>
@@ -218,7 +202,7 @@
                             </h3>
                         </div>
                         <div class="aspect-w-16 aspect-h-9">
-                            <canvas id="portfolioChart" class="h-64"></canvas>
+                            <canvas id="portfolioChart" class="h-64 print:h-16"></canvas>
                         </div>
                     </div>
                 </div>
@@ -234,25 +218,25 @@
                             <tr>
                                 <th scope="col"
                                     class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider dark:text-zinc-300">
-                                    Symbol</th>
+                                    Symbol <i class="fa-solid fa-sort"></i></th>
                                 <th scope="col"
                                     class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider dark:text-zinc-300">
-                                    Position</th>
+                                    Position <i class="fa-solid fa-sort"></i></th>
                                 <th scope="col"
                                     class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider dark:text-zinc-300">
-                                    Current Price</th>
+                                    Current Price <i class="fa-solid fa-sort"></i></th>
                                 <th scope="col"
                                     class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider dark:text-zinc-300">
-                                    Avg. Cost</th>
+                                    Avg. Cost <i class="fa-solid fa-sort"></i></th>
                                 <th scope="col"
                                     class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider dark:text-zinc-300">
-                                    P/L</th>
+                                    P/L <i class="fa-solid fa-sort"></i></th>
                                 <th scope="col"
                                     class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider dark:text-zinc-300">
-                                    P/L %</th>
+                                    P/L % <i class="fa-solid fa-sort"></i></th>
                                 <th scope="col"
                                     class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider dark:text-zinc-300">
-                                    Market Value</th>
+                                    Market Value <i class="fa-solid fa-sort"></i></th>
                             </tr>
                         </thead>
                         <tbody class="bg-white divide-y divide-gray-200 dark:bg-zinc-800 dark:divide-zinc-700">
@@ -331,18 +315,23 @@
             const savedTheme = localStorage.getItem('theme') || 'light';
             if (savedTheme === 'dark') {
                 document.documentElement.classList.add('dark');
-                document.getElementById('light-mode-icon').classList.add('hidden');
-                document.getElementById('dark-mode-icon').classList.remove('hidden');
+                document.getElementById('dark-mode-icon').classList.add('hidden');
+                document.getElementById('light-mode-icon').classList.remove('hidden');
             }
             const themeToggle = document.getElementById('theme-toggle');
             themeToggle.addEventListener('click', function () {
                 document.documentElement.classList.toggle('dark');
-                document.getElementById('light-mode-icon').classList.toggle('hidden');
                 document.getElementById('dark-mode-icon').classList.toggle('hidden');
+                document.getElementById('light-mode-icon').classList.toggle('hidden');
                 const isDark = document.documentElement.classList.contains('dark');
                 localStorage.setItem('theme', isDark ? 'dark' : 'light');
                 updateChartsForTheme(isDark);
             });
+
+            document.getElementById('print-pdf').addEventListener('click', function () {
+                window.print();
+            });
+
             try {
                 portfolioDataGlobal = JSON.parse('{{ portfolio|tojson }}');
                 createPortfolioChart(portfolioDataGlobal, 'marketValue');
@@ -387,10 +376,10 @@
                     maintainAspectRatio: false,
                     plugins: {
                         legend: {
-                            position: 'right',
+                            position: 'left',
                             labels: {
                                 padding: 20,
-                                boxWidth: 12
+                                boxWidth: 12,
                             }
                         },
                         tooltip: {
